ags (2.4.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed appdata.xml

ags (2.4.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_audio_buffer_util_resample_with_buffer() and related
	* fixed potential buffer-overflow in ags_sfz_sample.c
	* fixed potential SIGSEGV in ags_sound_resource.c doing resample

ags (2.4.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved alphabetically sorted plugin filenames in AgsLadspaBrowser and AgsLv2Browser
	* improved AgsEffectBridge removing effects

ags (2.4.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV related to AgsFFPlayer's effect bulk
	* fixed accessing freed memory of AgsBulkMember

ags (2.4.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potentially freed env pointer

ags (2.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsPriority to configure RT threads

ags (2.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved idle CPU usage
	* implemented ags_cell_pattern_play()
	* fixed AgsNotationEdit position cursor by using left or right key

ags (2.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented playback as clicking AgsPiano of AgsNotationEditor
	* implemented missing feedback of AgsNotationEditor
	* implemented ags_machine_playback_set_active()
	* implemented AgsResetNote
	* implemented AgsSF2Loader
	* implemented ags_audio_loop_test_flags(), ags_audio_loop_set_flags() and ags_audio_loop_unset_flags()
	* refactored ags_pad_play() to use ags_machine_playback_set_active()
	* refactored AgsStartAudio task to use ags_audio_start()
	* refactored AgsStartChannel task to use ags_channel_start()
	* refactored AgsCancelAudio task to use ags_audio_stop()
	* refactored AgsCancelChannel task to use ags_channel_stop()
	* improved AgsFFPlayer to use AgsSF2Loader
	* improved AgsPiano missing event mask