@@ -564,6 +564,7 @@ ags_audio_thread_run(AgsThread *thread)
 	}
 	
 	if((recall_id = ags_channel_check_scope(channel, sound_scope)) != NULL){
+#if 0
 	  ags_channel_recursive_run_stage(channel,
 					  sound_scope, (AGS_SOUND_STAGING_FEED_INPUT_QUEUE |
 							AGS_SOUND_STAGING_AUTOMATE |
@@ -576,6 +577,13 @@ ags_audio_thread_run(AgsThread *thread)
 					  sound_scope, (AGS_SOUND_STAGING_RUN_POST |
 							AGS_SOUND_STAGING_DO_FEEDBACK |
 							AGS_SOUND_STAGING_FEED_OUTPUT_QUEUE));
+#else
+	  ags_channel_recursive_run_stage(channel,
+					  sound_scope, (AGS_SOUND_STAGING_AUTOMATE |
+							AGS_SOUND_STAGING_RUN_PRE |
+							AGS_SOUND_STAGING_RUN_INTER |
+							AGS_SOUND_STAGING_RUN_POST));
+#endif
 	  
 	  g_list_free_full(recall_id,
 			   g_object_unref);
@@ -587,6 +595,7 @@ ags_audio_thread_run(AgsThread *thread)
 	  }
 	  
 	  if((recall_id = ags_channel_check_scope(channel, sound_scope)) != NULL){
+#if 0
 	    ags_channel_recursive_run_stage(channel,
 					    sound_scope, (AGS_SOUND_STAGING_FEED_INPUT_QUEUE |
 							  AGS_SOUND_STAGING_AUTOMATE |
@@ -599,6 +608,13 @@ ags_audio_thread_run(AgsThread *thread)
 					    sound_scope, (AGS_SOUND_STAGING_RUN_POST |
 							  AGS_SOUND_STAGING_DO_FEEDBACK |
 							  AGS_SOUND_STAGING_FEED_OUTPUT_QUEUE));
+#else
+	    ags_channel_recursive_run_stage(channel,
+					    sound_scope, (AGS_SOUND_STAGING_AUTOMATE |
+							  AGS_SOUND_STAGING_RUN_PRE |
+							  AGS_SOUND_STAGING_RUN_INTER |
+							  AGS_SOUND_STAGING_RUN_POST));
+#endif
 	  
 	    g_list_free_full(recall_id,
 			     g_object_unref);
@@ -637,6 +653,7 @@ ags_audio_thread_run(AgsThread *thread)
 	}
 
 	if((recall_id = ags_channel_check_scope(channel, sound_scope)) != NULL){
+#if 0
 	  ags_channel_recursive_run_stage(channel,
 					  sound_scope, (AGS_SOUND_STAGING_RESET |
 							AGS_SOUND_STAGING_FEED_INPUT_QUEUE |
@@ -650,6 +667,13 @@ ags_audio_thread_run(AgsThread *thread)
 					  sound_scope, (AGS_SOUND_STAGING_RUN_POST |
 							AGS_SOUND_STAGING_DO_FEEDBACK |
 							AGS_SOUND_STAGING_FEED_OUTPUT_QUEUE));
+#else
+	  ags_channel_recursive_run_stage(channel,
+					  sound_scope, (AGS_SOUND_STAGING_AUTOMATE |
+							AGS_SOUND_STAGING_RUN_PRE |
+							AGS_SOUND_STAGING_RUN_INTER |
+							AGS_SOUND_STAGING_RUN_POST));
+#endif
 	  
 	  g_list_free_full(recall_id,
 			   g_object_unref);
@@ -661,6 +685,7 @@ ags_audio_thread_run(AgsThread *thread)
 	  }
 
 	  if((recall_id = ags_channel_check_scope(channel, sound_scope)) != NULL){
+#if 0
 	    ags_channel_recursive_run_stage(channel,
 					    sound_scope, (AGS_SOUND_STAGING_RESET |
 							  AGS_SOUND_STAGING_FEED_INPUT_QUEUE |
@@ -674,6 +699,13 @@ ags_audio_thread_run(AgsThread *thread)
 					    sound_scope, (AGS_SOUND_STAGING_RUN_POST |
 							  AGS_SOUND_STAGING_DO_FEEDBACK |
 							  AGS_SOUND_STAGING_FEED_OUTPUT_QUEUE));
+#else
+	    ags_channel_recursive_run_stage(channel,
+					    sound_scope, (AGS_SOUND_STAGING_AUTOMATE |
+							  AGS_SOUND_STAGING_RUN_PRE |
+							  AGS_SOUND_STAGING_RUN_INTER |
+							  AGS_SOUND_STAGING_RUN_POST));
+#endif
 	  
 	    g_list_free_full(recall_id,
 			     g_object_unref);
