@@ -525,6 +525,7 @@ ags_channel_thread_run(AgsThread *thread)
 
     if(ags_playback_get_recall_id(playback, sound_scope) != NULL){    
       if((recall_id = ags_channel_check_scope(channel, sound_scope)) != NULL){
+#if 0
 	ags_channel_recursive_run_stage(channel,
 					sound_scope, (AGS_SOUND_STAGING_FEED_INPUT_QUEUE |
 						      AGS_SOUND_STAGING_AUTOMATE |
@@ -537,7 +538,14 @@ ags_channel_thread_run(AgsThread *thread)
 					sound_scope, (AGS_SOUND_STAGING_RUN_POST |
 						      AGS_SOUND_STAGING_DO_FEEDBACK |
 						      AGS_SOUND_STAGING_FEED_OUTPUT_QUEUE));
-	  
+#else
+	ags_channel_recursive_run_stage(channel,
+					sound_scope, (AGS_SOUND_STAGING_AUTOMATE |
+						      AGS_SOUND_STAGING_RUN_PRE |
+						      AGS_SOUND_STAGING_RUN_INTER |
+						      AGS_SOUND_STAGING_RUN_POST));
+#endif
+	
 	g_list_free_full(recall_id,
 			 g_object_unref);
       }
@@ -549,6 +557,7 @@ ags_channel_thread_run(AgsThread *thread)
       }
 
       if((recall_id = ags_channel_check_scope(channel, sound_scope)) != NULL){
+#if 0
 	ags_channel_recursive_run_stage(channel,
 					sound_scope, (AGS_SOUND_STAGING_FEED_INPUT_QUEUE |
 						      AGS_SOUND_STAGING_AUTOMATE |
@@ -561,7 +570,14 @@ ags_channel_thread_run(AgsThread *thread)
 					sound_scope, (AGS_SOUND_STAGING_RUN_POST |
 						      AGS_SOUND_STAGING_DO_FEEDBACK |
 						      AGS_SOUND_STAGING_FEED_OUTPUT_QUEUE));
-	  
+#else
+	ags_channel_recursive_run_stage(channel,
+					sound_scope, (AGS_SOUND_STAGING_AUTOMATE |
+						      AGS_SOUND_STAGING_RUN_PRE |
+						      AGS_SOUND_STAGING_RUN_INTER |
+						      AGS_SOUND_STAGING_RUN_POST));
+#endif
+	
 	g_list_free_full(recall_id,
 			 g_object_unref);
       }
